[package]
name = "rbackup"
version = "0.1.0"
authors = ["JendaKolena <jendakolena@gmail.com>"]

[dependencies]

failure = "~0.1"
failure_derive = "~0.1"
log = "~0.3"
env_logger = "~0.4"
text_io = "0.1.6"
time = "0.1"
config = "0.7"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
multimap = "0.4.0"
serde = "~1"
serde_derive = "~1"
serde_json = "~1"
