[package]
name = "rbackup"
version = "0.1.0"
authors = ["JendaKolena <jendakolena@gmail.com>"]

[dependencies]

failure = "~0.1"
failure_derive = "~0.1"
log = "~0.3"
env_logger = "~0.4"
text_io = "0.1.6"
time = "0.1"
config = "0.7"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
multimap = "0.4.0"
serde = "~1"
serde_derive = "~1"
serde_json = "~1"
rdedup-lib = "~2.0"
url = "*"
slog = { version = "2.0.10", features = ["max_level_trace", "release_max_level_trace"]}
slog-term = "2"
slog-async = "2"
pipe = "0.0.3"
mysql = { version = "~12.1", features = ["ssl"] }
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
sha2 = "0.7.0"
uuid = { version = "0.4", features = ["serde", "v4"] }
rust-crypto = "^0.2"
arrayref = "0.3.4"
hex = "~0.3"