[package]
name = "rbackup"
version = "0.1.0"
authors = ["JendaKolena <jendakolena@gmail.com>"]

cargo-features = ["edition"]
edition = "2018"

[dependencies]

failure = "~0.1"
failure_derive = "~0.1"
log = "~0.3"
env_logger = "~0.4"
text_io = "0.1.6"
time = "0.1"
config = "0.7"
rocket = { version = "~0.4", features = ["tls"] }
multimap = "0.4.0"
serde = "~1"
serde_derive = "~1"
serde_json = "~1"
rdedup-lib = "~3.1"
url = "1.7.2"
slog = { version = "2.0.10", features = ["max_level_trace", "release_max_level_trace"]}
slog-term = "2"
slog-async = "2"
slog-stream = "1.2.0"
pipe = "0.0.3"
mysql = { version = "~15.0", features = ["ssl"] }
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
sha2 = "0.7.0"
uuid = { version = "0.4", features = ["serde", "v4"] }
rust-crypto = "^0.2"
arrayref = "0.3.4"
hex = "~0.3"
stringreader = "0.1.1"
cadence = "0.14.0"
stopwatch = "0.0.7"
multipart = "0.14.2"
clap = "2"
either = "1.4"
cache_2q = "0.10.0"